# baro

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  works.md
adr/: 0001-extend-existing-participant-test-files-in-place.md  0001-fix-overflow-by-wrapping-the-goal-text-in-the-existing-parag.md  0001-use-node-test-runner-for-orchestrator-participant-tests.md  0002-give-the-goal-box-a-fixed-3-line-text-capacity-and-scroll-to.md  0002-keep-the-existing-node-test-runner-and-dependency-set.md  (+10 more)
crates/baro-tui/: Cargo.toml
crates/baro-tui/src/: app.rs  architect_runner.rs  branch_authority.rs  claude_runner.rs  config.rs  context.rs  conversation_frontdoor.rs  conversation_host.rs  conversation_runner.rs  dag_state.rs  discovery.rs  doctor.rs  events.rs  executor.rs  gateway_credential.rs  git.rs  headless_transport.rs  intake_runner.rs  main.rs  notification.rs  orchestrator_client.rs  planner_host.rs  planner_runner.rs  planner_stream_bridge.rs  preaccept_context.rs  progressive_planning.rs  provider_ownership.rs  repository_brief.rs  resume.rs  review_refiner.rs  service.rs  subprocess.rs  theme.rs  ui.rs  utils.rs
crates/baro-tui/src/architect_runner/: outcome.rs
crates/baro-tui/src/cli/: cli.rs  mod.rs  session.rs
crates/baro-tui/src/conversation/: context.rs  contract.rs  mod.rs  persistence.rs  session.rs
crates/baro-tui/src/runners/: mod.rs
crates/baro-tui/src/screens/: api_key_input.rs  context.rs  conversation.rs  execute.rs  execute_activity.rs  execute_completion.rs  execute_dag.rs  execute_dashboard.rs  execute_explorer.rs  execute_stats.rs  mod.rs  mode_picker.rs  planning.rs  provider_picker.rs  review.rs  welcome.rs  widgets.rs
crates/baro-tui/src/subprocess/: windows_job.rs
desktop/: README.md  (+3 more)
(+36 files in other folders)
