[package]
name = "baro-tui"
version = "0.30.0"
edition = "2021"

[[bin]]
name = "baro"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
which = "6"

[target.'cfg(unix)'.dependencies]
crossterm = { version = "0.28", features = ["use-dev-tty"] }
