[package]
name = "baro-tui"
version = "0.70.7"
edition = "2021"

[[bin]]
name = "baro"
path = "src/main.rs"

[dependencies]
# `unstable-rendered-line-info` exposes Paragraph::line_count, used to scroll the
# goal box to exactly the wrapped tail (a char-count estimate mispredicts word-wrap).
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4"
which = "6"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
crossterm = { version = "0.28", features = ["use-dev-tty"] }
